# pixiv-viewer-apk

./: .browserslistrc  .eslintrc.js  .gitignore  .npmrc  LICENSE  README.md  babel.config.js  capacitor.config.json  jsconfig.json  package.json  pnpm-lock.yaml  vue.config.js
.github/: FUNDING.yml
.github/workflows/: build-capacitor.yml  build-tauri.yml  build.yml
android/: .gitignore  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
ios/App/: Podfile  exportOptions.plist
public/: index.html  manifest.json  robots.txt
src/: App.vue  i18n.js  main.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  main.rs
src/api/: http.js  index.js  user.js
src/components/: DirectPximg.vue  FlexWaterfall.vue  HelloWorld.vue  ImageCard.vue  ImageLayout.vue  ImageLocal.vue  ImagePximg.vue  ImageSlide.vue  JustifiedLayout.vue  Masonry.vue  Nav.vue  NovelCard.vue  PageLoading.vue  Preload.vue  SpCard.vue  SvgIcon.vue  TopBar.vue  TrueMasonry.js  VueMasonryCss.js
src/consts/: index.js
src/directives/: longpress.js
src/icons/: Icon.vue  index.js
src/layouts/: BaseLayout.vue  MainLayout.vue  SafeAreaLayout.vue
src/lib/: lodash.js  polyfill.js  vant-style.js  vant.js
src/locales/: de.json  el.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh-CN.json  zh-Hans.json  zh-Hant.json  zh-TW.json
src/platform/: index.js
src/router/: index.js
src/store/: index.js
src/utils/: filter.js  font.js  index.js  (+3 more)
(+133 files in other folders)
