[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["asadahimeka"]
license = "MIT"
repository = "https://github.com/asadahimeka/pixiv-viewer-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=2.5.1", features = [ "devtools"] }
tauri-plugin-window-state = { version = "=2.2.2" }
tauri-plugin-deep-link = { version = "=2.2.1" }
tauri-plugin-dialog = "=2.2.1"
tauri-plugin-os = "=2.2.1"
tauri-plugin-process = "=2.2.1"
tauri-plugin-notification = "=2.2.2"
tauri-plugin-shell = "=2.2.1"
tauri-plugin-http = { version = "=2.2.0", features = ["unsafe-headers"] }
tauri-plugin-clipboard-manager = "=2.2.2"
tauri-plugin-fs = "=2.2.1"
reqwest = { version = "0.12.15", features = ["stream"] }
futures-util = "0.3.21"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "=2.2.3", features = ["deep-link"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
